--- a/data/index.css
+++ b/data/index.css
@@ -112,4 +112,14 @@ background-color: rgb(0, 187, 255);
     border: none;
     outline: none;
      
-    }  
+    } 
+    
+.ledRouge, .ledJaune, .ledVert {
+
+        width: 10px;
+        height: 10px;
+        border-radius: 50px;
+        background-color : rgb(220, 14, 14);
+        display: inline-block;
+        text-align: right;
+    }
